--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Belanosima&family=Fasthand&family=Manrope:wght@200&display=swap');
 
 :root{
     --font1: 'Manrope', sans-serif;
@@ -34,8 +34,13 @@ body{
    text-align: center;
    margin-top: -26%;
    border-radius: 10px;
+   font-family: 'Belanosima', sans-serif;
+   
 }
+.cap1:hover{
+    letter-spacing: 5px;
 
+}
 .back{
     margin: 5% 10%;
 }
@@ -160,6 +165,7 @@ body{
    border-radius: 10px;
    box-sizing: border-box;
    padding: 2%;
+   font-family: 'Fasthand', cursive;
 }
 .img{
     height: 40vh;
@@ -267,7 +273,83 @@ select{
    margin-top: 2%;
 }
 
+@media only screen and (max-width:1400px) {
+    
+    body{
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+        background-color: #3D087B;
+    
+    }
+    
+.cap1{
+    height: 10vh;
+    width: 45vw;
+   text-align: center;
+  position:absolute;
+  top: 108%;
+  left: 5%;
+  font-size: 1.6em;
+   
+}
 
+.time{
+    height: 40vh;
+    width: 45vw;
+    background-color: var(--color1);
+    border-radius: var(--redious);
+    position: absolute;
+    top: 55%;
+    left: 5%;
+}
+
+#tm1{
+    display: none;
+    
+    
+}
+
+.c1{
+   
+  padding: 2%;
+  
+}
+
+.but{
+    width: 20vw;
+    height: 7vh;
+    position:absolute;
+    top: 80%;
+    left: 5%;
+
+}
+
+#d{
+    width: 23vw;
+    height: 16vh;
+  
+   font-size: 1em;
+   color: #914103;
+   line-height: 7px;
+   position:absolute;
+   top: 80%;
+   left: 27%;
+}
+
+.img{
+    height: 40vh;
+    width: 40vw;
+    position: absolute;
+   left: 54%;
+   top: 58%;
+   
+}
+
+
+
+    
+}
 
 
 
@@ -518,13 +600,284 @@ select{
 }
 
 
+@media only  screen and (max-width:950px) {
+
+    
+.time{
+    height: 40vh;
+    width: 45vw;
+    position: absolute;
+    top: 35%;
+    left: 5%;
+}
+
+.c1{
+    box-sizing: border-box;
+   padding: 5%;
+   padding-top: 10%;
+
+
+  
+}
+
+.tm{
+    height: 7vh;
+    width: 7vw;
+    border-radius: 10px;
+ font-size: 2.5em;
+ padding: 2.5%;
+ box-sizing: border-box;
+
+
+}
+
+.cap1{
+    width: 45vw;
+  position:absolute;
+  top: 72%;
+  left: 5%;
+  font-size: 1.5em;
+  box-sizing: border-box;
+  padding: 5%;
+   
+}
+
+.but{
+    width: 45vw;
+    position:absolute;
+    top: 67%;
+    left: 5%;
+
+}
+
+#d{
+    width: 45vw;
+    height: 15vh;
+   position:absolute;
+   top: 77%;
+   left: 5%;
+   font-size: 2em;
+}
+
+.img{
+    height: 40vh;
+    width: 40vw;
+    position: absolute;
+   left: 55%;
+   top: 47%;
+   
+
+}
+.cap2{
+    box-sizing: border-box;
+    padding: 5%;
+    font-size: 1.5em;
+}
 
 
 
 
 
 
-@media only screen and (max-width:850px) {
+
+    
+}
+
+
+
+
+
+
+@media only screen and (max-width:850px){
+   
+       body{
+        padding: 0;
+        margin: 0;
+       }
+   
+        .clock{
+            height: 25vh;
+            width: 90vw; 
+           position: absolute;
+           left: 5%;
+           top: 15%;
+          
+           box-sizing: border-box;
+          
+        
+        }
+        .c1{
+            height: 12vh;
+            width: 90vw; 
+            background-color: var(--color1);
+           border-radius: 10px;
+           position: absolute;
+           z-index: 2;
+           text-align: center;
+           box-sizing: border-box;
+          padding: 2%;
+           display: flex;
+           flex-direction: row;
+           flex-wrap: wrap;
+           justify-content: space-evenly;
+        
+          
+        }
+        .tm{
+            height: 10vh;
+            width: 15vw;
+            border-radius: 10px;
+         font-size: 3.5em;
+        
+        
+        
+        }
+       
+        #tm5{
+           background-color: #5F0089;
+           color: #EDEDED;
+           padding-top: 10px;
+           box-sizing: border-box;
+        }
+        .c2{
+            height: 5vh;
+            width: 80vw; 
+            background-color: var(--color1);
+            opacity: 0.73;
+           border-radius: 10px;
+           position: absolute;
+           bottom: 39%;
+           left: 5%;
+           z-index: 1;
+        }
+        .c3{
+            height: 5vh;
+            width: 70vw; 
+            background-color: var(--color1);
+            opacity: 0.23;
+           border-radius: 10px;
+           position: absolute;
+           bottom: 29%;
+           left: 10%;
+           z-index: 2;
+        }
+        .cap2{
+            height: 10vh;
+            width: 90vw;
+           position: absolute;
+           left: 5%;
+           top: 34%;
+           font-size: 2.5em;
+           box-sizing: border-box;
+           padding-top: 2%;
+           
+        }
+        .time{
+            width: 90vw;
+            height: 35vh;
+           position: absolute;
+           left: 5%;
+           top: 72%;
+           
+        }
+        .fx{
+            width: 85vw;
+            height: 7vh;
+           
+            display:flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: space-evenly;
+        
+        }
+        .cp{
+            width: 20vw;
+            height: 10vh;
+            font-size: 1.5em;
+            box-sizing: border-box;
+            padding: 2px;
+        }
+        
+        select{
+            height:5vh;
+            width: 20vw;
+            font-size: large;
+            
+        }
+        
+        .img{
+            height: 40vh;
+            width: 90vw;
+            position: absolute;
+           left: 5%;
+           top: 85%;
+           
+        }
+        .cap1{
+            height: 10vh;
+            width: 90vw;
+            margin: var(--bottom);
+           text-align: center;
+           border-radius: 10px;
+           position: absolute;
+           top: 125%;
+           left: 5%;
+           font-size: 2.5em;
+        }
+        
+        
+        #d{
+            width: 90vw;
+            height: 16vh;
+           line-height: 7px;
+           position: absolute;
+           top: 150%;
+           left: 5%;
+           font-size: 2em;
+           
+        }
+        .but{
+            width: 90vw;
+            height: 10vh;
+            position: absolute;
+            top: 139%;
+            left: 5%;
+            font-size: 2.5em;
+            
+        }
+   }
+
+
+@media  only screen and (max-width:800px) {
+
+    .time{
+        width: 90vw;
+        height: 35vh;
+       position: absolute;
+       left: 5%;
+       top: 75%;
+       
+    }
+    
+    #d{
+       font-size: 1.6em;
+       
+    }
+
+
+
+    
+}
+
+
+
+
+
+
+
+
+
+@media only screen and (max-width:550px) {
 
     body{
         padding: 0;
@@ -542,11 +895,11 @@ select{
         .clock{
             height: 25vh;
             width: 100%; 
-           position: relative;
-           left: 0%;
-           top: 0%;
+           position: absolute;
+           left: 5%;
+           top: 10%;
            margin-top: -5%;
-           margin-left: 50px;
+           
            box-sizing: border-box;
           
         
@@ -620,14 +973,17 @@ select{
            position: absolute;
            left: 5%;
            top: 30%;
-           margin-top: -5%;  
+           font-size: 1.6em;
+           box-sizing: border-box;
+           padding-top: 2%;
+          
         }
         .time{
             width: 90vw;
             height: 35vh;
            position: absolute;
            left: 5%;
-           top: 75%;
+           top: 74%;
            
         }
         .fx{
@@ -704,3 +1060,89 @@ select{
     
         
     }
+@media only screen and (max-width:400px) {
+
+    .time{
+        width: 90vw;
+        height: 35vh;
+       position: absolute;
+       left: 5%;
+       top: 80%;
+       
+    }
+     
+    #d{
+       font-size: 1em;
+    }
+    .but{
+        font-size: 1.5em;
+    }
+    
+    .tm{
+        height: 9vh;
+        width: 16vw;
+        border-radius: 10px;
+     font-size: 2em;
+    
+    
+    }
+    
+    .clock{
+        height: 25vh;
+        width: 100%; 
+       position: absolute;
+       left: 5%;
+       top: 15%;
+       box-sizing: border-box;
+      
+    }
+    
+    .logo{
+    height: 5vh;
+    width: 30vw;
+    position: absolute;
+    top: 0%;
+    left: 5%;
+    }
+    .cap2{
+        height: 10vh;
+        width: 90vw;
+       position: absolute;
+       left: 5%;
+       top: 32%;
+       
+      
+    }
+    
+    .img{
+        height: 36vh;
+        width: 90vw;
+        position: absolute;
+       left: 5%;
+       top: 82%;
+       background-repeat: no-repeat;
+       background-size: cover;
+       margin-top: -2%;
+       margin-bottom: 10%;
+       border-radius: 10px;
+       background-color: #EDEDED;
+    
+    }
+    
+}
+
+@media only screen and (max-width:376px) {
+    .time{
+        width: 90vw;
+        height: 35vh;
+       position: absolute;
+       left: 5%;
+       top: 88%;
+       
+    }
+
+    .cap2{
+        font-size: 1.2em;
+    }
+}
+
